--- a/index.html
+++ b/index.html
@@ -4,6 +4,26 @@
 <title>Username Generator</title>
   
 </head>
-<body></body>
+<body>
+  
+  
+ <div class="controlContainer" id="mainData">
+    <select name="Games">
+      <option value="minecraft">Minecraft</option>
+      <option value="leagueOfLegends">League of Legends</option>
+      <option value="worldOfWarcraft">War Of Warcraft</option>
+    </select>
+ </div>
+  
+
+ <div class="controlContainer" id="options">
+ </div>
+  
+  
+  <div class="controlContainer" id="options">
+ </div>
+  
+  
+</body>
   
 </html>
