--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <select name="Games">
       <option value="minecraft">Minecraft</option>
       <option value="leagueOfLegends">League of Legends</option>
-      <option value="worldOfWarcraft">War Of Warcraft</option>
+      <option value="worldOfWarcraft">World Of Warcraft</option>
     </select>
  </div>
   
