--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
   
   
  <div class="controlContainer" id="mainData">
-    <select name="Games">
-      <option value="minecraft">Minecraft</option>
-      <option value="leagueOfLegends">League of Legends</option>
-      <option value="worldOfWarcraft">World Of Warcraft</option>
-    </select>
+    <datalist id="browsers">
+      <option value="minecraft"></option>
+      <option value="leagueOfLegends"></option>
+      <option value="worldOfWarcraft"></option>
+    </datalist>
  </div>
   
 
