--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   
  <div class="controlContainer" id="mainData">
     <datalist id="browsers">
-      <option value="minecraft"></option>
-      <option value="leagueOfLegends"></option>
-      <option value="worldOfWarcraft"></option>
+      <option value="Minecraft"></option>
+      <option value="League Of Legends"></option>
+      <option value="World Of Warcraft"></option>
     </datalist>
  </div>
   
