--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   
   
  <div class="controlContainer" id="mainData">
+     <input list="browsers">
     <datalist id="browsers">
       <option value="Minecraft"></option>
       <option value="League Of Legends"></option>
@@ -20,7 +21,7 @@
  </div>
   
   
-  <div class="controlContainer" id="options">
+  <div class="controlContainer" id="final">
  </div>
   
   
