--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
       <option value="League Of Legends"></option>
       <option value="World Of Warcraft"></option>
     </datalist>
-   <br>First name:<br>
-  <input type="text" name="Nickname"><br>
+   Nickname:<br>
+  <input type="text" name="nickname"><br>
  </div>
   
 
