--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
       <option value="League Of Legends"></option>
       <option value="World Of Warcraft"></option>
     </datalist>
-   Nickname:<br>
-  <input type="text" name="nickname"><br>
+   Nickname:
+  <input type="text" name="nickname">
  </div>
   
 
