--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   
   
  <div class="controlContainer" id="mainData">
+   Game:
      <input list="browsers">
     <datalist id="browsers">
       <option value="Minecraft"></option>
