--- a/index.html
+++ b/index.html
@@ -17,10 +17,24 @@
     </datalist>
    Nickname:
   <input type="text" name="nickname">
+   Choice: 
+   <input type="checkbox" name="opt0" value="random">
+   Verb:
+  <input type="text" name="verb">
+   <input type="checkbox" name="opt1" value="verb">
+   Adjective:
+  <input type="text" name="adjective">
+   <input type="checkbox" name="opt2" value="adjective">
+   Noun:
+  <input type="text" name="noun">
+   <input type="checkbox" name="opt3" value="noun">
+   
  </div>
   
 
  <div class="controlContainer" id="options">
+   Random:
+   <input type="checkbox" name="opt4" value="random">
  </div>
   
   
