--- a/index.html
+++ b/index.html
@@ -35,6 +35,13 @@
  <div class="controlContainer" id="options">
    Random:
    <input type="checkbox" name="opt4" value="random">
+   Verb:
+   <input type="checkbox" name="opt5" value="verb2">
+   Adjective:
+   <input type="checkbox" name="opt6" value="adjective2">
+   Noun:
+   <input type="checkbox" name="opt7" value="noun2">
+   
  </div>
   
   
