--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <title>Username Generator</title>
  <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
   
