--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <title>Username Generator</title>
  <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="style.css">
+ <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+ <script src="main.js"></script>
 </head>
 <body>
   
