--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
    Nickname:
   <input type="text" name="nickname">
    Choice: 
-   <input type="checkbox" name="opt0" value="random">
+   <input type="checkbox" name="opt0" value="random" id='choiceOption'>
    Verb:
   <input type="text" name="verb">
    <input type="checkbox" name="opt1" value="verb">
@@ -37,11 +37,11 @@
 
  <div class="controlContainer" id="options">
    Random:
-   <input type="checkbox" name="opt4" value="random">
+   <input type="checkbox" name="opt4" value="random" id='random'>
    Verb:
-   <input type="checkbox" name="opt5" value="verb2">
+   <input type="checkbox" name="opt5" value="verb2" id='verb'>
    Adjective:
-   <input type="checkbox" name="opt6" value="adjective2">
+   <input type="checkbox" name="opt6" value="adjective2" id='adjective'>
    Noun:
    <input type="checkbox" name="opt7" value="noun2">
    
